Protótipo Home Odonto Master

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="top-banner__content">
                     <div class="top-banner__warning">
-                        <strong>ATENÇÃO!</strong>Os produtos desse site são restritos à Dentistas com CRO, Clínicas Odontológicas e Estudantes de Graduação em Odontologia.
+                        <strong>ATENÇÃO!</strong> Os produtos desse site são restritos à Dentistas com CRO, Clínicas Odontológicas e Estudantes de Graduação em Odontologia.
                     </div>
                     <div class="top-banner__login">
                         <a href="/login/index.html" class="login-link">Olá Visitante, Identifique-se aqui</a>
@@ -159,7 +159,7 @@
                         <i class="fas fa-times"></i>
                     </button>
 
-                    <!-- Menu de Navegação -->
+                    <!-- Navigation Menu -->
                     <div class="navigation-menu">
                         <ul class="menu-list">
                             <li class="menu-item menu-item--has-submenu">
@@ -174,7 +174,7 @@
                             <li class="menu-item"><a href="/categoria/pecas-de-mao/index.html" class="menu-link">Peças de Mão</a></li>
                             <li class="menu-item"><a href="/categoria/protese/index.html" class="menu-link">Prótese</a></li>
                             <li class="menu-item menu-item--highlighted">
-                                <a href="/pages/odontoverse/odontoverse.html" class="menu-link">Odontoverse</a>
+                                <a href="/pages/odontoverse/odontoverse.html" class="menu-link">Estudantes</a>
                             </li>
                         </ul>
                     </div>
