Prototipo 2109 Odonto Master

--- a/pages/dentistica/dentistica.html
+++ b/pages/dentistica/dentistica.html
@@ -22,10 +22,10 @@
             <div class="container">
                 <div class="top-banner__content">
                     <div class="top-banner__warning">
-                        <strong>ATENÇÃO!</strong>Os produtos desse site são restritos à Dentistas com CRO, Clínicas Odontológicas e Estudantes de Graduação em Odontologia.
+                        <strong>ATENÇÃO!</strong> Os produtos desse site são restritos à Dentistas com CRO, Clínicas Odontológicas e Estudantes de Graduação em Odontologia.
                     </div>
                     <div class="top-banner__login">
-                        <a href="/login/index.html" class="login-link">Olá Visitante, Identifique-se aqui</a>
+                        <p>Olá Visitante, identifique-se <a href="/pages/login/login.html" alt="Tela de Login">aqui</a> ou <a href="/pages/registro/index.html" alt="Tela de Registro">registre-se</a></p>
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
 
         <!-- Search Bar --> 
                     <div class="search-bar">
-                        <form class="search-form" id="searchForm" autocomplete="off" method="get" action="/busca/index.html">
+                        <form class="search-form" id="searchForm" autocomplete="off" method="get" action="/pages/busca/index.html">
                             <div class="search-form__wrapper">
                                 <input type="text" 
                                        class="search-form__input" 
@@ -136,11 +136,6 @@
             <div class="container">
                 <div class="main-navigation__content">
                     
-                    <!-- Mobile Menu Close -->
-                    <button class="mobile-menu-close" aria-label="Fechar menu" id="mobileMenuClose">
-                        <i class="fas fa-times"></i>
-                    </button>
-
                     <!-- Menu de Navegação -->
                     <div class="navigation-menu">
                         <ul class="menu-list">
@@ -156,7 +151,7 @@
                             <li class="menu-item"><a href="/categoria/pecas-de-mao/index.html" class="menu-link">Peças de Mão</a></li>
                             <li class="menu-item"><a href="/categoria/protese/index.html" class="menu-link">Prótese</a></li>
                             <li class="menu-item menu-item--highlighted">
-                                <a href="/pages/odontoverse/odontoverse.html" class="menu-link">Odontoverse</a>
+                                <a href="/pages/odontoverse/odontoverse.html" class="menu-link">Estudantes</a>
                             </li>
                         </ul>
                     </div>
@@ -197,6 +192,20 @@
             </div>
         </nav>
     </header>
+
+    <!-- Breadcrumb -->
+    <div class="breadcrumbs">
+        <div class="container">
+            <ul class="breadcrumb__list">
+                <li class="breadcrumb__item">
+                    <a href="/pages/home/index.html" class="breadcrumb__link">Home</a>
+                </li>
+                <li class="breadcrumb__item">
+                    <span class="breadcrumb__link">Dentística</span>
+                </li>
+            </ul>
+        </div>
+    </div>
 
         <!-- Conteúdo Principal -->
         <main class="main-content category-page">
