Prototipo 2209 Odonto Master

--- a/pages/institucional/quem-somos.html
+++ b/pages/institucional/quem-somos.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/pages/institucional/quem-somos.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
   
 </head>
 <body>
@@ -30,7 +31,7 @@
                         <strong>ATENÇÃO!</strong> Os produtos desse site são restritos à Dentistas com CRO, Clínicas Odontológicas e Estudantes de Graduação em Odontologia.
                     </div>
                     <div class="top-banner__login">
-                        <a href="#" class="login-link">Olá Visitante, Identifique-se aqui</a>
+                        <p>Olá Visitante, identifique-se <a href="/pages/login/login.html" alt="Tela de Login">aqui</a> ou <a href="/pages/registro/index.html" alt="Tela de Registro">registre-se</a></p>
                     </div>
                 </div>
             </div>
