Prototipo 2309 Odonto Master - Manhã

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -44,7 +44,7 @@
                         <strong>ATENÇÃO!</strong> Os produtos desse site são restritos à Dentistas com CRO, Clínicas Odontológicas e Estudantes de Graduação em Odontologia.
                     </div>
                     <div class="top-banner__login">
-                        <p>Olá Visitante, identifique-se <a href="/pages/login/login.html" alt="Tela de Login">aqui</a> ou <a href="/pages/registro/index.html" alt="Tela de Registro">registre-se</a></p>
+                        <p id="userGreeting">Olá Visitante, identifique-se <a href="/pages/login/login.html" alt="Tela de Login">aqui</a> ou <a href="/pages/registro/index.html" alt="Tela de Registro">registre-se</a></p>
                     </div>
                 </div>
             </div>
@@ -118,9 +118,11 @@
                         </div>
 
                         <div class="my-account">
+                            <a class="my-account__link" href="/pages/minha-conta/index.html">
                             <button class="my-account__trigger" aria-label="Minha conta">
-                                <i class="fas fa-user"></i>
-                                <a class="my-account__link" href="#"></a>
+                                <i class="fas fa-user"></i>                               
+                            </button>
+                            </a>
                         </div>
 
                         <!--Carrinho -->
@@ -293,7 +295,7 @@
         <!-- Carrosel Produtos -->
         <section class="products">
             <div class="container">
-            <h2 class="section-title">Produtos em Destaque</h2>
+            <h2 class="section-title">MELHORES OFERTAS</h2>
             
             <div class="products-carousel-container js-product-carousel aria" aria-roledescription="carousel" aria-label="Produtos em Destaque">
                 <button class="carousel-nav carousel-nav--prev" aria-label="Anterior">
@@ -449,9 +451,8 @@
                 <div class="footer-bottom__section">
                     <h4 class="footer-bottom__title">REDES SOCIAIS</h4>
                     <div class="social-media">
-                        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/DentalOdontoMaster/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/dentalodontomaster/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
