Prototipo 2609.1 Odonto Master

--- a/pages/minha-conta/index.html
+++ b/pages/minha-conta/index.html
@@ -175,7 +175,7 @@
                                 
                                 <div class="form-row">
                                     <div class="form-group">
-                                        <label for="account-cpf" class="form-label">CPF *</label>
+                                        <label for="account-cpf" class="form-label">CPF/CNPJ *</label>
                                         <input type="text" id="account-cpf" class="form-input" placeholder="000.000.000-00" required>
                                     </div>
                                     
