--- a/pages/checkout/checkout.html
+++ b/pages/checkout/checkout.html
@@ -89,6 +89,7 @@
     </div>
   </main>
 
+  <script src="/assets/js/script.js"></script>
   <script src="/pages/checkout/checkout.js"></script>
 </body>
 </html>
