Prototipo Odonto Master 2809

--- a/pages/odontoverse/odontoverse.html
+++ b/pages/odontoverse/odontoverse.html
@@ -446,20 +446,20 @@
                 <div class="footer-column">
                     <h4 class="footer-column__title">INSTITUCIONAL</h4>
                     <ul class="footer-column__list">
-                        <li><a href="/institucional/quem-somos/index.html" class="footer-link">Quem Somos</a></li>
-                        <li><a href="/institucional/estudantes/index.html" class="footer-link">Estudantes</a></li>
+                        <li><a href="/pages/institucional/quem-somos.html" class="footer-link">Quem Somos</a></li>
+                        <li><a href="/pages/odontoverse/odontoverse.html" class="footer-link">Estudantes</a></li>
                         <li><a href="/institucional/revenda/index.html" class="footer-link">Revenda</a></li>
-                        <li><a href="/login/index.html" class="footer-link">Login/Cadastro</a></li>
-                        <li><a href="/institucional/trabalhe-conosco/index.html" class="footer-link">Trabalhe Conosco</a></li>
+                        <li><a href="/pages/login/login.html" class="footer-link">Login/Cadastro</a></li>
+                        <li><a href="https://odonto-master.rds.land/trabalhe-conosco   " class="footer-link">Trabalhe Conosco</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-column">
                     <h4 class="footer-column__title">AJUDA</h4>
                     <ul class="footer-column__list">
-                        <li><a href="/ajuda/como-comprar/index.html" class="footer-link">Como Comprar</a></li>
-                        <li><a href="/ajuda/trocas-devolucoes/index.html" class="footer-link">Trocas e Devoluções</a></li>
-                        <li><a href="/ajuda/politica-privacidade/index.html" class="footer-link">Política de Privacidade</a></li>
+                        <li><a href="/pages/ajuda/como-comprar.html" class="footer-link">Como Comprar</a></li>
+                        <li><a href="/pages/ajuda/trocas-e-devolucoes.html" class="footer-link">Trocas e Devoluções</a></li>
+                        <li><a href="/pages/ajuda/politica-de-privacidade.html" class="footer-link">Política de Privacidade</a></li>
                         <li><a href="/ajuda/cashback-frete/index.html" class="footer-link">Cashback de Frete</a></li>
                     </ul>
                 </div>
