--- a/pages/registro/index.html
+++ b/pages/registro/index.html
@@ -289,7 +289,7 @@
                             <div class="form-group checkbox-group">
                                 <input type="checkbox" id="terms" name="terms" autocomplete="off" required>
                                 <label for="terms" class="form-checkbox-label">
-                                    Li e concordo com os <a href="#" class="link">Termos de Uso</a> e <a href="#" class="link">Política de Privacidade</a> *
+                                    Li e concordo com os <a href="/pages/ajuda/politica-de-privacidade.html" class="link">Termos de Uso e Política de Privacidade </a> * 
                                 </label>
                             </div>
                             
@@ -306,6 +306,7 @@
                             <button type="submit" class="registration-button">
                                 <i class="fas fa-user-plus"></i> Criar Conta
                             </button>
+
                         </div>
                     </form>
                     
