Prototipo 3110 Odonto Master

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -211,7 +211,7 @@
                             <a href="/cimentacao" class="submenu__title-link">
                                 <h3 class="submenu__title">Cimentos</h3>
                             </a>
-                    </div>
+                        </div>
                         <div class="submenu__column">
                             <a href="/cirurgia-e-periodontia" class="submenu__title-link">
                                 <h3 class="submenu__title">Cirurgia e Periodontia</h3>
@@ -600,7 +600,7 @@
                         </div>
                         <div class="product-slide">
                             <article class="product-card" data-product-id="prod10">
-                                <a href="/pages/produto/produto.html?category=Cadeira+Odontol%C3%B3gica&brand=Kavo&id=prod10" class="product-card-link">
+                                <a href="/pages/produto/produto.html?category=Cadeira+Odontológica&brand=Kavo&id=prod10" class="product-card-link">
                                     <div class="product-card__image">
                                         <img src="/images/cadeira.png" alt="Cadeira Odontológica Kavo Unik">
                                         <div class="product-badge product-badge--discount">15% OFF</div>
